# mini-project-cpp-s4

./: .gitignore  README.md
GET_THE_DEUG/: CMakeLists.txt
GET_THE_DEUG/include/: Animations.hpp  Bar.hpp  Boss.hpp  Collider.hpp  Collision.hpp  ContView.hpp  Game.hpp  Menu.hpp  Model.hpp  Obstacle.hpp  Player.hpp
GET_THE_DEUG/src/: Animation.cpp  Bar.cpp  Boss.cpp  Collider.cpp  Collision.cpp  ContView.cpp  Game.cpp  Menu.cpp  Model.cpp  Obstacle.cpp  Player.cpp  main.cpp
